remove latest tag on image definition for client deployment config

--- a/k8s/ingess-service.yaml
+++ b/k8s/ingess-service.yaml
@@ -6,7 +6,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /api/
+      - path: /api
         backend:
           serviceName: server-cluster-ip-service
           servicePort: 5000
