--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: abcmer/hotdogs-client:latest
+          image: abcmer/hotdogs-client
           ports:
             - containerPort: 80
