--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
     build: ./server
     ports:
       - "5000:5000"
+    environment: 
+      - DB=mongodb://mongo:27017/todos
   mongo:
     image: "mongo"
     container_name: "hotdogs-mongo"
