--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 version: '3'
 services:
   client:
-    container_name: hotdogs-client
-    image: hotdogs-client
+    container_name: oscars-club-client
+    image: oscars-club-client
     build: ./client
     ports:
       - "80:80"
   server:
     depends_on:
       - mongo
-    container_name: hotdogs-server
-    image: hotdogs-server
+    container_name: oscars-club-server
+    image: oscars-club-server
     build: ./server
     ports:
       - "5000:5000"
@@ -18,7 +18,7 @@ services:
       - DB=mongodb://mongo:27017/todos
   mongo:
     image: "mongo"
-    container_name: "hotdogs-mongo"
+    container_name: "oscars-club-mongo"
     ports:
       - "27017:27017"
     volumes:
