--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     ports:
       - "5000:5000"
     environment: 
-      - DB=mongodb://mongo:27017/todos
+      - DB=mongodb://mongo:27017/oscars-club
   mongo:
     image: "mongo"
     container_name: "oscars-club-mongo"
