--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "ag-grid-community": "^23.2.1",
+    "ag-grid-react": "^23.2.1",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "react": "^16.13.1",
