--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
